--- a/index.html
+++ b/index.html
@@ -12,8 +12,34 @@
   </head>
   <body>
     <div id="new-user">
-      <h1>Hello There!</h1>
-      <h2>To get started, please enter your name.</h2>
+      <div class="container z-depth-4">
+        <div class="card blue-grey darken-1">
+          <div class="card-content white-text">
+            <span class="card-title center-align">Hey There!</span>
+            <p class="center-align">To get started, please enter your name.</p>
+            <form class="col">
+              <div class="row">
+                <div class="input-field col s12">
+                  <input
+                    type="text"
+                    placeholder="Add Name"
+                    id="user-name"
+                    class="center-align white-text"
+                  />
+                  <!-- <label for="user-name">Name</label> -->
+                </div>
+                <div class="center-align">
+                  <button
+                    class="waves-effect waves-light btn-floating btn-large btn pink accent-1 z-depth-2"
+                  >
+                    <i class="fas fa-thumbs-up"></i>
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div id="returning-user">
