added user button event listener and function

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="center-align">
                   <button
-                    class="waves-effect waves-light btn-floating btn-large btn pink accent-1 z-depth-2"
+                    class="waves-effect waves-light btn-floating btn-large btn pink accent-1 z-depth-2 user-add-btn"
                   >
                     <i class="fas fa-thumbs-up"></i>
                   </button>
